--- a/RXapplicationGUI-master/pom.xml
+++ b/RXapplicationGUI-master/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>controlsfx</artifactId>
             <version>11.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>19</version>
+        </dependency>
     </dependencies>
 
     <build>
