--- a/RXapplicationGUI-master/pom.xml
+++ b/RXapplicationGUI-master/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>javafx-base</artifactId>
             <version>19</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>19</version>
+        </dependency>
     </dependencies>
 
     <build>
