--- a/RXapplicationGUI-master/pom.xml
+++ b/RXapplicationGUI-master/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>javafx-graphics</artifactId>
             <version>19</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
