--- a/RXapplicationGUI-master/pom.xml
+++ b/RXapplicationGUI-master/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>guice</artifactId>
             <version>4.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
